--- a/public/instructions.html
+++ b/public/instructions.html
@@ -2,26 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Instructions</title>
     <style>
         html, body {
             height: 100%;
-            margin: 0;
-        }
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }        
-        iframe {
             width: 100%;
-            height: 100%;
+            margin: 0;
+            overflow: hidden;
+        }
+
+        iframe {
+            width: 100vw;
+            height: 100vh;
+            max-width: 100%;
+            max-height: 100%;            
             border: none;
         }
     </style>    
 </head>
 <body>
-    <iframe src="/documents/Stratego_Instructions.pdf" width="100%" height="100%"></iframe>
+    <iframe src="/documents/Stratego_Instructions.pdf"></iframe>
 </body>
 </html>
