--- a/public/instructions.html
+++ b/public/instructions.html
@@ -12,14 +12,7 @@
             overflow: hidden;
         }
 
-        /* iframe {
-            width: 100vw;
-            height: 100vh;
-            max-width: 100%;
-            max-height: 100%;            
-            border: none;
-        } */
-        object {
+        embed {
             width: 100vw;
             height: 100vh;
             border: none;
@@ -28,9 +21,6 @@
     </style>    
 </head>
 <body>
-    <!-- <iframe src="/documents/Stratego_Instructions.pdf"></iframe> -->
-    <object data="/documents/Stratego_Instructions.pdf" type="application/pdf">
-        <p> You don't have a PDF plugin for this browser. You can <a href="/documents/Stratego_Instructions.pdf">click here to download the PDF</a>.</p>
-    </object>
+    <embed src="/documents/Stratego_Instructions.pdf" type="application/pdf">
 </body>
 </html>
